syntax = "proto2";

package cross;

//pk数据
message PkData{
    required int32 pkValue=1;
}
